# HRMSLite

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  attendance.py  employee.py
backend/app/routers/: api.py  attendance.py  employees.py  health.py
backend/app/schemas/: attendance.py  employee.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  EmptyState.module.css  EmptyState.tsx  ErrorMessage.module.css  ErrorMessage.tsx  Input.module.css  Input.tsx  Layout.module.css  Layout.tsx  PageSection.module.css  PageSection.tsx  Select.tsx  Spinner.module.css  Spinner.tsx  Table.module.css  Table.tsx
frontend/src/pages/: AddEmployeePage.tsx  AttendancePage.tsx  DashboardPage.module.css  DashboardPage.tsx  EmployeesPage.tsx  HomePage.module.css  HomePage.tsx  NotFoundPage.tsx
frontend/src/services/: api.ts  attendance.ts  employees.ts
frontend/src/types/: attendance.ts  employee.ts
